--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,138 +8,123 @@
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to right, #2e8b57, #f9c846);
+      padding: 0;
+      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #2c9762, #e4cb3f);
       display: flex;
-      flex-direction: column;
+      justify-content: center;
       align-items: center;
-      justify-content: flex-start;
-      min-height: 100vh;
+      height: 100vh;
     }
-    .header {
-      text-align: center;
-      margin-top: 20px;
-    }
-    .header img {
-      width: 100px;
-      height: auto;
-    }
-    .header h1 {
-      margin: 10px 0 0;
-      color: #2e8b57;
-    }
-    .header p {
-      font-style: italic;
-      color: #333;
-    }
+
     .container {
-      background-color: #fff;
+      background: #fff;
       padding: 2rem;
-      border-radius: 15px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.2);
-      max-width: 500px;
-      width: 90%;
-      margin-top: 20px;
-    }
-    label {
-      display: block;
-      margin-top: 1rem;
-    }
-    input, textarea {
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      max-width: 400px;
       width: 100%;
-      padding: 0.6rem;
-      margin-top: 0.3rem;
+      text-align: center;
+    }
+
+    h1 {
+      color: #2c9762;
+    }
+
+    input,
+    textarea,
+    select,
+    button {
+      width: 100%;
+      margin-bottom: 1rem;
+      padding: 0.75rem;
       border: 1px solid #ccc;
       border-radius: 5px;
+      font-size: 1rem;
     }
+
     button {
-      margin-top: 1.5rem;
-      width: 100%;
-      padding: 0.8rem;
-      background-color: #2e8b57;
+      background-color: #2c9762;
       color: white;
-      border: none;
-      border-radius: 5px;
       cursor: pointer;
+      transition: background 0.3s ease;
     }
+
     button:hover {
-      background-color: #246f45;
+      background-color: #247a4e;
     }
-    .whatsapp {
+
+    .footer {
       margin-top: 1rem;
-      text-align: center;
+      font-size: 0.85rem;
+      color: #333;
     }
-    .whatsapp a {
-      background-color: #25D366;
-      padding: 10px 20px;
-      border-radius: 5px;
-      color: white;
-      text-decoration: none;
-    }
-    footer {
-      margin-top: 2rem;
-      text-align: center;
-      font-size: 0.9rem;
-      color: #444;
+
+    .logo {
+      width: 80px;
+      margin-bottom: 1rem;
     }
   </style>
 </head>
+
 <body>
-  <div class="header">
-    <img src="logo.png" alt="Logo">
-    <h1>SportelloPubblico</h1>
-    <p>Il punto digitale dei tuoi diritti</p>
-  </div>
   <div class="container">
-    <form action="https://hook.eu2.make.com/afc1t3w4ra1ojutixienru2ohrosytwt" method="POST">
-      <label for="name">Nome:</label>
-      <input type="text" name="name" required>
-      <label for="email">Email:</label>
-      <input type="email" name="email" required>
-      <label for="telefono">Telefono:</label>
-      <input type="text" name="telefono" required>
-      <label for="data">Data dell'appuntamento:</label>
-      <input type="date" name="data" required min="" id="datePicker">
-      <label for="message">Motivo dell'appuntamento:</label>
-      <textarea name="message" rows="4" required></textarea>
-      <input type="hidden" name="Firma" value="Richiesta inviata tramite www.sportellopubblico.it">
+    <img src="logo.png" alt="Logo" class="logo">
+    <h1>SportelloPubblico</h1>
+    <form id="appointmentForm">
+      <input type="text" id="name" placeholder="Nome" required>
+      <input type="email" id="email" placeholder="Email" required>
+      <input type="tel" id="phone" placeholder="Telefono" required>
+      <select id="day" required>
+        <option value="">Seleziona un giorno</option>
+        <option value="Lunedì">Lunedì</option>
+        <option value="Mercoledì">Mercoledì</option>
+        <option value="Venerdì">Venerdì</option>
+      </select>
+      <textarea id="reason" placeholder="Motivo dell'appuntamento" required></textarea>
       <button type="submit">Invia richiesta</button>
     </form>
-    <div class="whatsapp">
-      <a href="https://wa.me/393517624080" target="_blank">Contattaci su WhatsApp</a>
+    <a href="https://wa.me/393517624080" target="_blank">
+      <button>Contattaci su WhatsApp</button>
+    </a>
+    <div class="footer">
+      <p>📍 Via Roma 119 - Lariano (RM)</p>
+      <p>🕒 Dal lunedì al venerdì: 9:30 - 13:00 | 16:00 - 19:00</p>
     </div>
   </div>
-  <footer>
-    <p><strong>Indirizzo:</strong> Via Roma 119, Lariano (RM)<br>
-    <strong>Orari:</strong> Lun-Ven 9:30–13:00 / 16:00–19:00<br>
-    <strong>Email:</strong> info@caflariano.it</p>
-  </footer>
+
   <script>
-    const datePicker = document.getElementById(\"datePicker\");
-    const today = new Date();
-    const pad = n => n < 10 ? '0' + n : n;
-    const formatDate = date => `${date.getFullYear()}-${pad(date.getMonth() + 1)}-${pad(date.getDate())}`;
+    const form = document.getElementById('appointmentForm');
 
-    function isValidDay(date) {
-      return [1, 3, 5].includes(date.getDay()); // lunedì (1), mercoledì (3), venerdì (5)
-    }
+    form.addEventListener('submit', async (e) => {
+      e.preventDefault();
 
-    function getNextValidDate(start) {
-      const nextDate = new Date(start);
-      while (!isValidDay(nextDate)) {
-        nextDate.setDate(nextDate.getDate() + 1);
-      }
-      return formatDate(nextDate);
-    }
+      const data = {
+        name: document.getElementById('name').value,
+        email: document.getElementById('email').value,
+        phone: document.getElementById('phone').value,
+        day: document.getElementById('day').value,
+        reason: document.getElementById('reason').value,
+      };
 
-    datePicker.setAttribute('min', getNextValidDate(today));
-    datePicker.addEventListener('input', function () {
-      const selected = new Date(this.value);
-      if (!isValidDay(selected)) {
-        alert(\"Puoi prenotare solo lunedì, mercoledì o venerdì.\");
-        this.value = '';
+      try {
+        const response = await fetch('https://hook.eu2.make.com/afc1t3w4ra1ojutixienru2ohrosytwt', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(data)
+        });
+
+        if (response.ok) {
+          alert('Richiesta inviata con successo!');
+          form.reset();
+        } else {
+          alert('Errore nell'invio della richiesta.');
+        }
+      } catch (error) {
+        alert('Errore di connessione al server.');
       }
     });
   </script>
 </body>
+
 </html>
