--- a/index.html
+++ b/index.html
@@ -1,130 +1,79 @@
 <!DOCTYPE html>
 <html lang="it">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SportelloPubblico</title>
   <style>
     body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(to right, #4CAF50, #FFEB3B);
       margin: 0;
       padding: 0;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #2c9762, #e4cb3f);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
     }
-
     .container {
-      background: #fff;
-      padding: 2rem;
-      border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
       max-width: 400px;
-      width: 100%;
+      background: white;
+      margin: 50px auto;
+      padding: 30px;
+      border-radius: 10px;
       text-align: center;
     }
-
-    h1 {
-      color: #2c9762;
+    img {
+      width: 100px;
+      margin-bottom: 10px;
     }
-
-    input,
-    textarea,
-    select,
-    button {
+    h2 {
+      color: #2E7D32;
+    }
+    input, select, textarea, button {
       width: 100%;
-      margin-bottom: 1rem;
-      padding: 0.75rem;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      font-size: 1rem;
+      padding: 10px;
+      margin-top: 10px;
+      font-size: 16px;
     }
-
     button {
-      background-color: #2c9762;
+      background-color: #2E7D32;
       color: white;
+      border: none;
       cursor: pointer;
-      transition: background 0.3s ease;
     }
-
-    button:hover {
-      background-color: #247a4e;
+    .whatsapp {
+      background-color: #25D366;
+      margin-top: 10px;
     }
-
     .footer {
-      margin-top: 1rem;
-      font-size: 0.85rem;
-      color: #333;
-    }
-
-    .logo {
-      width: 80px;
-      margin-bottom: 1rem;
+      margin-top: 20px;
+      font-size: 14px;
     }
   </style>
 </head>
-
 <body>
   <div class="container">
-    <img src="logo.png" alt="Logo" class="logo">
-    <h1>SportelloPubblico</h1>
-    <form id="appointmentForm">
-      <input type="text" id="name" placeholder="Nome" required>
-      <input type="email" id="email" placeholder="Email" required>
-      <input type="tel" id="phone" placeholder="Telefono" required>
-      <select id="day" required>
-        <option value="">Seleziona un giorno</option>
+    <img src="logo.png" alt="Logo" />
+    <h2>SportelloPubblico</h2>
+    <form action="https://formspree.io/f/xeoayeyq" method="POST">
+      <input type="text" name="nome" placeholder="Nome" required />
+      <input type="email" name="email" placeholder="Email" required />
+      <input type="tel" name="telefono" placeholder="Telefono" required />
+      <select name="giorno" required>
+        <option value="">Seleziona giorno</option>
         <option value="Lunedì">Lunedì</option>
         <option value="Mercoledì">Mercoledì</option>
         <option value="Venerdì">Venerdì</option>
       </select>
-      <textarea id="reason" placeholder="Motivo dell'appuntamento" required></textarea>
+      <textarea name="messaggio" placeholder="Motivo dell'appuntamento" required></textarea>
+      <input type="hidden" name="Firma" value="Richiesta inviata tramite www.sportellopubblico.it">
       <button type="submit">Invia richiesta</button>
     </form>
     <a href="https://wa.me/393517624080" target="_blank">
-      <button>Contattaci su WhatsApp</button>
+      <button class="whatsapp">Contattaci su WhatsApp</button>
     </a>
     <div class="footer">
-      <p>📍 Via Roma 119 - Lariano (RM)</p>
-      <p>🕒 Dal lunedì al venerdì: 9:30 - 13:00 | 16:00 - 19:00</p>
+      <p>📍 Via Roma 119 - Lariano (RM)<br>
+      🕒 Dal lunedì al venerdì: 9:30 - 13:00 | 16:00 - 19:00</p>
     </div>
   </div>
-
-  <script>
-    const form = document.getElementById('appointmentForm');
-
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault();
-
-      const data = {
-        name: document.getElementById('name').value,
-        email: document.getElementById('email').value,
-        phone: document.getElementById('phone').value,
-        day: document.getElementById('day').value,
-        reason: document.getElementById('reason').value,
-      };
-
-      try {
-        const response = await fetch('https://hook.eu2.make.com/afc1t3w4ra1ojutixienru2ohrosytwt', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(data)
-        });
-
-        if (response.ok) {
-          alert('Richiesta inviata con successo!');
-          form.reset();
-        } else {
-          alert('Errore nell'invio della richiesta.');
-        }
-      } catch (error) {
-        alert('Errore di connessione al server.');
-      }
-    });
-  </script>
 </body>
-
 </html>
+
