--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
       margin-top: 20px;
       font-size: 14px;
     }
+    .check-dispo {
+      background-color: #1976d2;
+      margin-top: 10px;
+    }
   </style>
 </head>
 <body>
@@ -66,6 +70,9 @@
       <input type="hidden" name="Firma" value="Richiesta inviata tramite www.sportellopubblico.it">
       <button type="submit">Invia richiesta</button>
     </form>
+    <a href="disponibilita.html" target="_blank">
+      <button class="check-dispo">Verifica disponibilità</button>
+    </a>
     <a href="https://wa.me/393517624080" target="_blank">
       <button class="whatsapp">Contattaci su WhatsApp</button>
     </a>
